samples/_failures_safe/1761306206_5be7ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec8cb4de.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_ec8cb4de.c:148:18: error: expected ‘;’ at end of input
  148 |             break
      |                  ^
      |                  ;
./samples/SAFE/__tmp_ec8cb4de.c:148:13: error: expected declaration or statement at end of input
  148 |             break
      |             ^~~~~
./samples/SAFE/__tmp_ec8cb4de.c:148:13: error: expected declaration or statement at end of input
